feat: Auth System is done

--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,5 +1,5 @@
-<h1>{{ title() }}</h1>
+<!--<h1>{{ title() }}</h1>-->
 
-<button (click)="testRegister()">🧪 Test Register</button>
+<!--<button (click)="testLogout()">🧪 Test Register</button>-->
 
 <router-outlet />
