feat: posts system and main feed done

--- a/Frontend/src/app/app.html
+++ b/Frontend/src/app/app.html
@@ -1,5 +1,5 @@
-<!--<h1>{{ title() }}</h1>-->
-
-<!--<button (click)="testLogout()">🧪 Test Register</button>-->
+@if (isLoggedIn()) {
+<app-navbar></app-navbar>
+}
 
 <router-outlet />
