feat: implement post details and comments

--- a/Frontend/src/app/features/posts/post-card/post-card.html
+++ b/Frontend/src/app/features/posts/post-card/post-card.html
@@ -6,7 +6,7 @@
       </div>
       <div class="author-details">
         <span class="author-name">{{ post.authorUsername }}</span>
-        <span class="post-time">{{ getRelativeTime() }}</span>
+        <span class="post-time">{{ post.createdAt | timeAgo }}</span>
       </div>
     </div>
 
