--- a/Frontend/src/app/shared/components/navbar/navbar.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.html
@@ -27,6 +27,13 @@
         <mat-icon>account_circle</mat-icon>
         <span>My Profile</span>
       </a>
+
+      @if (isAdmin()) {
+      <a mat-button routerLink="/admin" routerLinkActive="active" class="nav-link admin-link">
+        <mat-icon>shield</mat-icon>
+        <span>Admin Panel</span>
+      </a>
+      }
     </nav>
 
     <!-- Right Section -->
@@ -69,6 +76,16 @@
           <mat-icon>account_circle</mat-icon>
           <span>My Profile</span>
         </button>
+
+        @if (isAdmin()) {
+        <button mat-menu-item (click)="goToAdminPanel()">
+          <mat-icon>shield</mat-icon>
+          <span>Admin Panel</span>
+        </button>
+        }
+
+        <mat-divider></mat-divider>
+
         <button mat-menu-item (click)="onLogout()">
           <mat-icon>logout</mat-icon>
           <span>Logout</span>
