fix: adjust responsive style

--- a/Frontend/src/app/shared/components/navbar/navbar.html
+++ b/Frontend/src/app/shared/components/navbar/navbar.html
@@ -9,6 +9,7 @@
 
     <nav class="nav-links">
       <a
+        class="feed-link"
         mat-button
         routerLink="/feed"
         routerLinkActive="active"
@@ -23,7 +24,7 @@
         <span>Discover</span>
       </a>
 
-      <a mat-button routerLink="/my-profile" routerLinkActive="active">
+      <a class="myprofile-link" mat-button routerLink="/my-profile" routerLinkActive="active">
         <mat-icon>account_circle</mat-icon>
         <span>My Profile</span>
       </a>
